[gd_scene load_steps=3 format=3 uid="uid://dljth7jwfmjlx"]

[ext_resource type="Script" path="res://script/dialogos/contenidos_dialogo.gd" id="1_dahx1"]
[ext_resource type="LabelSettings" uid="uid://cdswba3l3ge7m" path="res://escenas/dialogos/dialogo_font.tres" id="2_xmv0t"]

[node name="ContenidosDialogo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_dahx1")
ruta_fondos = "Assets/DibujosNV/Fondos"

[node name="EscenaNV" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Fondo" type="TextureRect" parent="EscenaNV"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AreaPersonajes" type="Control" parent="EscenaNV"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Izquierda" type="Control" parent="EscenaNV/AreaPersonajes"]
layout_mode = 1
anchor_right = 0.4
anchor_bottom = 1.0
offset_bottom = 60.0
grow_vertical = 2
mouse_filter = 1

[node name="Centro" type="Control" parent="EscenaNV/AreaPersonajes"]
layout_mode = 1
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
offset_bottom = 60.0
mouse_filter = 1

[node name="Derecha" type="Control" parent="EscenaNV/AreaPersonajes"]
layout_mode = 1
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CuadroDiálogo" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.77
anchor_right = 0.9
anchor_bottom = 1.0
size_flags_vertical = 0
mouse_filter = 1

[node name="PanelNombre" type="Panel" parent="CuadroDiálogo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = -0.25
anchor_right = 0.25
grow_vertical = 0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="CuadroDiálogo/PanelNombre"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.278431, 0.478431, 1)

[node name="LabelNombre" type="Label" parent="CuadroDiálogo/PanelNombre"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Nombre"
label_settings = ExtResource("2_xmv0t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="CuadroDiálogo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.4, 0.666667, 1)

[node name="Texto" type="Label" parent="CuadroDiálogo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.1
anchor_right = 0.97
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
text = "Texto de ejemplo"
label_settings = ExtResource("2_xmv0t")
autowrap_mode = 2
